@@ -1,5 +1,19 @@
 #: E501
 a = '12345678901234567890123456789012345678901234567890123456789012345678901234567890'
+#: E501
+a = '1234567890123456789012345678901234567890123456789012345678901234567890' or \
+    6
+#: E501
+a = 7 or \
+    '1234567890123456789012345678901234567890123456789012345678901234567890' or \
+    6
+#: E501 E501
+a = 7 or \
+    '1234567890123456789012345678901234567890123456789012345678901234567890' or \
+    '1234567890123456789012345678901234567890123456789012345678901234567890' or \
+    6
+#: E501
+a = '1234567890123456789012345678901234567890123456789012345678901234567890'  # \
 #: E502
 a = ('123456789012345678901234567890123456789012345678901234567890123456789'  \
      '01234567890')
