@@ -36,6 +36,8 @@ Bug fixes:
 
 * Don't crash if os.path.expanduser() throws an ImportError. (Issue #297)
 
+* Do not skip physical checks if the newline is escaped. (Issue #319)
+
 
 1.5.7 (2014-05-29)
 ------------------
